# OSMO-v2

./: .gitignore  Cargo.toml  README.md
app/: .env.example  smoke.mjs
app/src/: App.tsx  config.ts  styles.css
app/src/lib/: faucet.ts  folio.ts
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs  test.rs
contracts/factory/test_snapshots/test/: creates_registered_working_folio.1.json  same_salt_cannot_deploy_twice.1.json
contracts/folio/: Cargo.toml
contracts/folio/src/: lib.rs  test.rs
contracts/folio/test_snapshots/test/: bootstrap_mints_dollar_shares.1.json  bootstrap_rejects_stale_oracle.1.json  constructor_rejects_duplicate_tokens.1.json  full_redeem_empties_folio.1.json  mint_pulls_exact_pro_rata_deposits.1.json  mint_works_with_stale_oracle.1.json  pause_blocks_mint_paths_only.1.json  redeem_before_bootstrap_errors_cleanly.1.json  redeem_rejects_more_than_balance.1.json  redeem_returns_pro_rata_and_burns.1.json  redeem_works_while_paused_and_with_dead_oracle.1.json  share_token_metadata_and_transfer.1.json
contracts/mock-price-feed/: Cargo.toml
contracts/mock-price-feed/src/: lib.rs
contracts/oracle-router/: Cargo.toml
contracts/oracle-router/src/: lib.rs  test.rs
contracts/oracle-router/test_snapshots/test/: both_feeds_dead_reports_primary_error.1.json  divergence_beyond_threshold_trips_breaker.1.json  downscales_high_decimal_feeds.1.json  normalizes_millisecond_timestamps.1.json  one_stale_feed_falls_back_when_allow_single.1.json  one_valid_feed_rejected_when_strict_dual.1.json  rejects_missing_and_nonpositive_prices.1.json  rejects_stale_missing_nonpositive_and_unregistered.1.json  rejects_stale_price.1.json  rejects_unregistered_token.1.json  rescales_feed_decimals_both_ways.1.json  rescales_feed_decimals_both_ways.2.json  returns_fresh_price_normalized.1.json  set_feeds_rejects_empty_and_too_many.1.json  symbol_mapped_assets_work.1.json  two_valid_feeds_return_midpoint_and_older_timestamp.1.json  upscales_low_decimal_feeds.1.json
crates/nebula-interfaces/: Cargo.toml
crates/nebula-interfaces/src/: lib.rs
docs/: CHALLENGES_AND_DECISIONS.md  CHECKLIST.md  DECISION_LOG.md  DEPLOYMENT.md  EXTERNAL_DEPENDENCIES.md  IMPLEMENTATION_PLAN.md
osmo/: .env.example
osmo/app/: globals.css  layout.tsx
osmo/app/dtf/: page.tsx
osmo/lib/: config.ts  faucet.ts  folio.ts
scripts/: deploy-folio-v2.ps1
(+6 files in other folders)
